Fix some alignments in template editing, mark as legacy and add link to PHP template docs

--- a/src/css/mc-styles.css
+++ b/src/css/mc-styles.css
@@ -426,7 +426,7 @@ ul.mc-file-list ul li {
 	width: 98%
 }
 
-#my-calendar-templates h2,
+#my-calendar-templates h2:not(.mc-flex),
 #my-calendar-templates h2 + p {
 	display: inline-block;
 }
